Added simple couchdb adapter and test

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git@github.com:flyvictor/fortune.git"
   },
   "dependencies": {
+    "cradle": "^0.6.9",
     "express": "~3.5.1",
     "i": "~0.3.2",
     "lodash": "~2.4.1",
