Skeleton neo4j adapter

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "~2.8.4",
     "mongoose": "~3.8.21",
     "nedb": "~0.10.4",
+    "neo4j": "^1.1.1",
     "qs": "^2.3.3",
     "rsvp": "~3.0.6",
     "sift": "^0.2.3",
